Fix: text wrap issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -44,3 +44,21 @@ h4 {
 ul {
     @apply list-disc space-y-1 my-1 xl:pl-16 md:pl-12 pl-8;
 }
+
+.postcard-text::-webkit-scrollbar {
+    width: 2px;
+    background-color: #F6F3EF;
+}
+
+.postcard-text::-webkit-scrollbar-thumb {
+    background-color: #F6F3EF;
+    transition: all .2s ease-in-out;
+}
+
+.postcard-text:hover::-webkit-scrollbar-thumb {
+    background-color: #C26A5A;
+}
+
+.postcard-text:hover::-webkit-scrollbar-thumb:active {
+    background-color: #A95447;
+}
